修改配置，欢迎页动态权限获取
Change-Id: Ibccccd6c40108537ffddfc42ca5093d9512bfd99

--- a/app/src/main/res/layout/fragment_personal.xml
+++ b/app/src/main/res/layout/fragment_personal.xml
@@ -34,7 +34,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tvContacts"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:srcCompat="@drawable/hughjackman"
+        app:srcCompat="@drawable/longmao"
         />
 
     <TextView
@@ -60,7 +60,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Will"
+        android:text="wei"
         android:textColor="#3c3c3c"
         app:layout_constraintEnd_toEndOf="@+id/ivAuthor"
         app:layout_constraintStart_toStartOf="@+id/ivAuthor"
@@ -71,7 +71,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="121dp"
-        android:text="Blog"
+        android:text="QQ"
         android:textColor="@android:color/darker_gray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/tvContacts"/>
