--- a/app/src/main/res/layout/activity_artcleread.xml
+++ b/app/src/main/res/layout/activity_artcleread.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -17,7 +19,8 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="8dp"
-            android:src="@drawable/ic_read_back" />
+            android:src="@drawable/ic_read_back"
+            />
 
         <RelativeLayout
             android:id="@+id/rl_top"
@@ -25,70 +28,71 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="8dp"
-            android:layout_toRightOf="@id/iv_back"
-            android:visibility="gone">
+            android:visibility="gone"
+            android:layout_toRightOf="@id/iv_back">
 
             <ImageView
                 android:id="@+id/iv_topLogo"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/ic_logo" />
+                android:src="@drawable/ic_logo"
+                />
 
             <TextView
                 android:id="@+id/tv_topname"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignTop="@id/iv_topLogo"
-                android:layout_marginLeft="8dp"
                 android:layout_toEndOf="@+id/iv_topLogo"
+                android:layout_marginLeft="8dp"
                 android:text=""
                 android:textColor="@android:color/black"
-                android:textStyle="bold" />
+                android:textStyle="bold"/>
 
 
             <TextView
                 android:id="@+id/tv_TopUpdateTime"
                 android:layout_width="wrap_content"
+                android:layout_marginLeft="8dp"
                 android:layout_height="wrap_content"
                 android:layout_alignBottom="@+id/iv_topLogo"
-                android:layout_marginLeft="8dp"
                 android:layout_toEndOf="@+id/iv_topLogo"
-                android:textColor="#989898"
-                android:textSize="@dimen/sp_12" />
+                android:textSize="@dimen/sp_12"
+                android:textColor="#989898"/>
 
             <Button
                 android:layout_width="60dp"
                 android:layout_height="30dp"
-                android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="15dp"
-                android:background="@drawable/read_bt_bg"
                 android:text="关注"
-                android:textColor="@android:color/white" />
+                android:layout_alignParentRight="true"
+                android:textColor="@android:color/white"
+                android:background="@drawable/read_bt_bg"
+                />
+
+
         </RelativeLayout>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1px"
             android:layout_alignParentBottom="true"
-            android:background="#e6e6e6" />
+            android:background="#e6e6e6"
+            />
     </RelativeLayout>
-    <FrameLayout
-        android:id="@+id/container"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginLeft="2dp"
-        android:layout_marginRight="2dp"
-        android:visibility="visible"></FrameLayout>
-    <com.android.coolPlay.widget.ObservableScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+
+    <com.android.coolPlay.widget.ObservableScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/ScrollView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:background="@android:color/white"
         android:descendantFocusability="blocksDescendants"
         android:fillViewport="true"
-        android:scrollbars="vertical">
+        android:scrollbars="vertical"
+        >
 
         <com.android.coolPlay.widget.SimpleMultiStateView
             android:id="@+id/SimpleMultiStateView"
@@ -98,12 +102,14 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                >
 
                 <RelativeLayout
                     android:id="@+id/ConstraintLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                  >
 
                     <TextView
                         android:id="@+id/tv_title"
@@ -114,12 +120,13 @@
                         android:layout_marginTop="8dp"
                         android:text=""
                         android:textColor="#333333"
-                        android:textSize="24sp" />
+                        android:textSize="24sp"
+                      />
 
                     <RelativeLayout
+                        android:layout_below="@id/tv_title"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/tv_title">
+                        android:layout_height="wrap_content">
 
 
                         <ImageView
@@ -128,40 +135,44 @@
                             android:layout_height="40dp"
                             android:layout_marginLeft="10dp"
                             android:layout_marginTop="8dp"
-                            android:src="@drawable/ic_logo" />
+                            android:src="@drawable/ic_logo"
+                            />
 
                         <TextView
                             android:id="@+id/tv_name"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_alignTop="@id/iv_logo"
                             android:layout_marginLeft="8dp"
-                            android:layout_toRightOf="@id/iv_logo"
                             android:text=""
+                            android:layout_alignTop="@id/iv_logo"
+                            android:layout_toRightOf="@id/iv_logo"
                             android:textColor="@android:color/black"
-                            android:textStyle="bold" />
+                            android:textStyle="bold"
+                            />
 
                         <TextView
                             android:id="@+id/tv_updateTime"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_alignBottom="@id/iv_logo"
                             android:layout_marginLeft="8dp"
                             android:layout_toRightOf="@id/iv_logo"
                             android:text=""
+                            android:textSize="@dimen/sp_12"
+                            android:layout_alignBottom="@id/iv_logo"
                             android:textColor="#989898"
-                            android:textSize="@dimen/sp_12" />
+                            />
 
                         <Button
                             android:id="@+id/bt_like"
                             android:layout_width="60dp"
                             android:layout_height="30dp"
-                            android:layout_alignParentRight="true"
-                            android:layout_centerVertical="true"
                             android:layout_marginEnd="15dp"
-                            android:background="@drawable/read_bt_bg"
+                            android:layout_alignParentRight="true"
                             android:text="关注"
-                            android:textColor="@android:color/white" />
+                            android:layout_centerVertical="true"
+                            android:textColor="@android:color/white"
+                            android:background="@drawable/read_bt_bg"
+                            />
                     </RelativeLayout>
                 </RelativeLayout>
 
@@ -172,7 +183,12 @@
                     android:layout_marginBottom="45dp"
                     android:layout_marginLeft="2dp"
                     android:layout_marginRight="2dp"
-                    android:background="@android:color/white" />
+                    android:background="@android:color/white"
+                    />
+                <FrameLayout
+                    android:id="@+id/container"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
             </LinearLayout>
 
         </com.android.coolPlay.widget.SimpleMultiStateView>
