--- a/app/src/main/res/layout/activity_artcleread.xml
+++ b/app/src/main/res/layout/activity_artcleread.xml
@@ -188,7 +188,9 @@
                 <FrameLayout
                     android:id="@+id/container"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom">
+                </FrameLayout>
             </LinearLayout>
 
         </com.android.coolPlay.widget.SimpleMultiStateView>
