--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#64B6D1</color>
+    <color name="colorPrimary">#121212</color>
     <color name="colorPrimaryDark">#F68E54</color>
     <color name="colorAccent">#FF4081</color>
     <color name="windowBackground">@android:color/white</color>
